win: Work around touch docker buttons triggering twice

Hack around the issue by blocking certain mouse events in the touch
docker.

See also: https://bugreports.qt.io/browse/QTBUG-95058
BUG: 437196